part2/03/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dwk-exercise-ns
  labels:
    name: dwk-exercise-ns
