part2/03/manifests/deployment-logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-exercise-ns
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: thepapermen/devopswithkubernetes:log_output-0.5.1-alpine
