part2/03/manifests/service-logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-exercise-ns
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
