part2/03/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-exercise-ns
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
